technologies/deployment-pipelines/todo-cd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: todo-app
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - image:  opeomotayo/todo-app:66
        name: todo-app
        ports:
        - containerPort: 8080
