technologies/deployment-pipelines/todo-cd/service.yaml
apiVersion: v1
# Indicates this as a service
kind: Service
metadata:
  # Service name
  name: todo-app
  namespace: todo-app
  labels:
    app: todo-app
spec:
  selector:
    # Selector for Pods
    app: todo-app
  ports:
    # Port Map
  - port: 80
    protocol: TCP
  type: ClusterIP
